修改表單驗證

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
         "activityBar.background": "#06351C",
         "titleBar.activeBackground": "#084A27",
         "titleBar.activeForeground": "#EEFDF5"
-    }
+    },
+    "liveServer.settings.port": 5501
 }
